--- a/source/html/index.html
+++ b/source/html/index.html
@@ -5,11 +5,44 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MP1 Starter</title>
+    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro" rel="stylesheet">
 </head>
 
 <body>
+    <nav>
+        <ul>
+            <li>Intro</li>
+            <li>Experience</li>
+            <li>Projects</li>
+            <li>Skills</li>
+            <li>Contact</li>
+        </ul>
+    </nav>
 
-    <h2>Welcome to MP1!</h2>
+    <div class="wrapper">
+        <div class="section red center">
+            <img id="profile-picture" src="assets/picture.jpg"/>
+            <h1 class="white">Pranay Prakash</h2>
+            <h3>CS &nbsp; May 2019</h3>
+        </div>
+        <div class="section green center">
+            <h2>Experience</h2>
+            <div class="caroussel">
+                <div id="work1">
+                    <a href="https://facebook.com">Facebook</a>
+                    Frontend Engineering Intern on Relay/GraphQL
+                </div>
+                <div id="work2" class="current">
+                    <a href="https://allstate.com">Allstate</a>
+                    Software Developer Intern on an internal dashboard tool
+                </div>
+                <div id="work3">
+                    <a href="https://cs196.xyz">CS 196</a>
+                    Executive Staff member for a freshman honors course
+                </div>
+            </div>
+        </div>
+    </div>
 
     <script src="bundle.js" type="text/javascript"></script>
 </body>
