--- a/source/html/index.html
+++ b/source/html/index.html
@@ -28,18 +28,28 @@
         <div class="section green center">
             <h2>Experience</h2>
             <div class="caroussel">
-                <div id="work1">
-                    <a href="https://facebook.com">Facebook</a>
-                    Frontend Engineering Intern on Relay/GraphQL
-                </div>
-                <div id="work2" class="current">
-                    <a href="https://allstate.com">Allstate</a>
-                    Software Developer Intern on an internal dashboard tool
-                </div>
-                <div id="work3">
-                    <a href="https://cs196.xyz">CS 196</a>
-                    Executive Staff member for a freshman honors course
-                </div>
+                <span class="controls" id="prev">◀</span>
+                <ul>
+                    <li id="work1">
+                        <span class="center">
+                            <a href="https://facebook.com">Facebook</a>
+                            Frontend Engineering Intern on Relay/GraphQL
+                        </span>
+                    </li>
+                    <li>
+                        <span class="center">
+                            <a href="https://allstate.com">Allstate</a>
+                            Software Developer Intern on an internal dashboard tool
+                        </span>
+                    </li>
+                    <li>
+                        <span class="center">
+                            <a href="https://cs196.xyz">CS 196</a>
+                            Executive Staff member for a freshman honors course
+                        </span>
+                    </li>
+                </ul>
+                <span class="controls" id="next">▶</span>
             </div>
         </div>
     </div>
