--- a/source/html/index.html
+++ b/source/html/index.html
@@ -22,11 +22,11 @@
     <div class="wrapper">
         <div class="section red center">
             <img id="profile-picture" src="assets/picture.jpg"/>
-            <h1 class="white">Pranay Prakash</h2>
+            <h1 class="white" id="name">Pranay Prakash</h2>
             <h3>CS &nbsp; May 2019</h3>
         </div>
         <div class="section green center">
-            <h2>Experience</h2>
+            <h1>Experience</h2>
             <div class="caroussel">
                 <span class="controls" id="prev">◀</span>
                 <ul>
@@ -50,6 +50,21 @@
                     </li>
                 </ul>
                 <span class="controls" id="next">▶</span>
+            </div>
+        </div>
+        <div class="section yellow center">
+            <h1>Projects</h2>
+            <div class="col">
+                <h2>CSS Peek</h2>
+                <p>CSS Peek is an extension for the famous text editor, Visual Studio Code. It gives you "Go To Definition", "PeeK" (hovering on an identifier to see its definition) and "Inline editing" functionality of CSS classNames and IDs to be able to peek and edit the actual CSS content from within a HTML file when "peek" - ing. It currently has over 40K installs and has some great reviews from the open source community.</p>
+            </div>
+            <div class="col">
+                <h2>ZEIT Deployments</h2>
+                <p>ZEIT deployments is a little app in React that simply uses the now API from ZEIT to display a listing of all deployments made to the ZEIT servers using now. It is an awesome way for you to share a file with yourself when you upload something from your personal laptop using now, and then jump over to a public computer, go to the URL where you deployed ZEIT Deployments and download the file you ust uploaded.</p>
+            </div>
+            <div class="col">
+                <h2>Relay</h2>
+                <p>Relay is an open source declerative data fetching library for Javascript managed by Facebook. It serves as a client library to help cosume data from a server that implements the GraphQL spec. Amongst other things, Relay provides abstractions for things like Request/Response caching, pagination and data refetching, streaming requests over polling/HTTP/2 Server push, etc.</p>
             </div>
         </div>
     </div>
