--- a/source/html/index.html
+++ b/source/html/index.html
@@ -25,7 +25,7 @@
             <h1 class="white" id="name">Pranay Prakash</h2>
             <h3>CS &nbsp; May 2019</h3>
         </div>
-        <div class="section green center">
+        <div class="section center">
             <h1>Experience</h2>
             <div class="caroussel">
                 <span class="controls" id="prev">◀</span>
@@ -52,7 +52,7 @@
                 <span class="controls" id="next">▶</span>
             </div>
         </div>
-        <div class="section yellow center">
+        <div class="section green center">
             <h1>Projects</h2>
             <div class="col">
                 <h2>CSS Peek</h2>
@@ -66,6 +66,9 @@
                 <h2>Relay</h2>
                 <p>Relay is an open source declerative data fetching library for Javascript managed by Facebook. It serves as a client library to help cosume data from a server that implements the GraphQL spec. Amongst other things, Relay provides abstractions for things like Request/Response caching, pagination and data refetching, streaming requests over polling/HTTP/2 Server push, etc.</p>
             </div>
+        </div>
+        <div class="section yellow center">
+            <h1>Skills</h2>
         </div>
     </div>
 
