--- a/source/html/index.html
+++ b/source/html/index.html
@@ -26,7 +26,7 @@
             <h3>CS &nbsp; May 2019</h3>
         </div>
         <div class="section center">
-            <h1>Experience</h2>
+            <h1 class="white">Experience</h2>
             <div class="caroussel">
                 <span class="controls" id="prev">◀</span>
                 <ul>
