--- a/source/html/index.html
+++ b/source/html/index.html
@@ -20,7 +20,7 @@
     </nav>
 
     <div class="wrapper">
-        <div class="section red center">
+        <div class="section intro center">
             <img id="profile-picture" src="assets/picture.jpg"/>
             <h1 class="white" id="name">Pranay Prakash</h2>
             <h3>CS &nbsp; May 2019</h3>
@@ -36,13 +36,13 @@
                             Frontend Engineering Intern on Relay/GraphQL
                         </span>
                     </li>
-                    <li>
+                    <li id="work2">
                         <span class="center">
                             <a href="https://allstate.com">Allstate</a>
                             Software Developer Intern on an internal dashboard tool
                         </span>
                     </li>
-                    <li>
+                    <li id="work3">
                         <span class="center">
                             <a href="https://cs196.xyz">CS 196</a>
                             Executive Staff member for a freshman honors course
