--- a/source/html/index.html
+++ b/source/html/index.html
@@ -70,6 +70,9 @@
         <div class="section yellow center">
             <h1>Skills</h2>
         </div>
+        <div class="section red center">
+            <h1>Contact</h2>
+        </div>
     </div>
 
     <script src="bundle.js" type="text/javascript"></script>
