--- a/source/html/index.html
+++ b/source/html/index.html
@@ -69,6 +69,11 @@
         </div>
         <div class="section yellow center">
             <h1>Skills</h2>
+            <p>My skills are rather limited. So instead of going on about how I specialis in "Microsoft Excel", I'll leav you with this video instead</p>
+            <video width="80%" autoplay>
+                <source src="https://www.w3schools.com/html/mov_bbb.mp4" type="video/mp4">
+            Your browser does not support the video tag.
+            </video>
         </div>
         <div class="section red center">
             <h1>Contact</h2>
