--- a/source/html/index.html
+++ b/source/html/index.html
@@ -12,7 +12,7 @@
 <body>
     <div id="overlay">
         <span id="modal-close">Close Modal</span>
-        <div class="section center">
+        <div class="center">
             Just more video here :)
             <video width="80%" autoplay loop>
                 <source src="https://www.w3schools.com/html/mov_bbb.mp4" type="video/mp4">
